--- a/pictureSNS/Base.lproj/Main.storyboard
+++ b/pictureSNS/Base.lproj/Main.storyboard
@@ -21,26 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="184" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TGC-3L-UOa">
-                                <rect key="frame" x="0.0" y="28" width="375" height="593"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="184" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TGC-3L-UOa">
+                                <rect key="frame" x="0.0" y="20" width="375" height="600"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell" rowHeight="184" id="s0O-a1-qfD">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="184"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s0O-a1-qfD" id="lL5-aN-8u4">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="183"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="original.png" translatesAutoresizingMaskIntoConstraints="NO" id="k53-Ai-reF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="183"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="600" id="yjb-53-2lC"/>
+                                </constraints>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyV-zb-Ray">
                                 <rect key="frame" x="56" y="629" width="96" height="30"/>
@@ -60,9 +46,15 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="TGC-3L-UOa" secondAttribute="trailing" id="6le-je-TwR"/>
+                            <constraint firstItem="TGC-3L-UOa" firstAttribute="leading" secondItem="LZG-R2-G0k" secondAttribute="leading" id="DmI-am-SyW"/>
+                            <constraint firstItem="TGC-3L-UOa" firstAttribute="top" secondItem="piz-h9-u4P" secondAttribute="bottom" id="gpQ-uh-tUw"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="table" destination="TGC-3L-UOa" id="Kyy-ay-cDq"/>
+                        <segue destination="K4W-6G-H9x" kind="presentation" identifier="GoToSendDataContlloer" id="ARn-Vp-YAO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZE-fL-oQi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -172,6 +164,40 @@
             </objects>
             <point key="canvasLocation" x="545" y="993"/>
         </scene>
+        <!--Send Data View Controller-->
+        <scene sceneID="LWq-Wj-Q4H">
+            <objects>
+                <viewController id="K4W-6G-H9x" customClass="SendDataViewController" customModule="pictureSNS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="US0-GN-OfS"/>
+                        <viewControllerLayoutGuide type="bottom" id="eub-RO-oCh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nYL-Ut-hQ7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ych-ja-hhk">
+                                <rect key="frame" x="0.0" y="20" width="375" height="582"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fcu-5V-yVT">
+                                <rect key="frame" x="13" y="617" width="349" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="ych-ja-hhk" id="B1w-Qj-Fpk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ofp-pG-BDU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2077.5999999999999" y="231.63418290854574"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -237,7 +263,4 @@
             <point key="canvasLocation" x="212" y="231.63418290854574"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="original.png" width="480" height="480"/>
-    </resources>
 </document>
